error.txt
/usr/lib/gcc/arm-none-eabi/14.1.0/cc1 -quiet <flags> -o build/modern/src/pokemon.o src/pokemon.c
In file included from src/pokemon.c:707:
src/data/object_events/object_event_pic_tables_followers.h:3405:20: error: 'gObjectEventPic_BasculinRedStriped' undeclared here (not in a function); did you mean 'gMonFrontPic_BasculinRedStriped'?
 3405 |     overworld_ascending_frames(gObjectEventPic_BasculinRedStriped, 4, 4),
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                    gMonFrontPic_BasculinRedStriped
src/data/object_events/object_event_pic_tables_followers.h:3408:20: error: 'gObjectEventPic_BasculinBlueStriped' undeclared here (not in a function); did you mean 'gMonFrontPic_BasculinBlueStriped'?
 3408 |     overworld_ascending_frames(gObjectEventPic_BasculinBlueStriped, 4, 4),
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                    gMonFrontPic_BasculinBlueStriped
In file included from src/data/pokemon/species_info.h:127,
                 from src/pokemon.c:709:
src/data/pokemon/species_info/gen_5_families.h:3828:564: error: 'gOverworldPalette_BasculinRedStriped' undeclared here (not in a function); did you mean 'gMonPalette_BasculinRedStriped'?
 3828 |         OVERWORLD(
      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    ^                                   
      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    gMonPalette_BasculinRedStriped
src/data/pokemon/species_info/gen_5_families.h:3828:627: error: 'gShinyOverworldPalette_BasculinRedStriped' undeclared here (not in a function); did you mean 'gShinyOverworldPalette_Scolipede'?
 3828 |         OVERWORLD(
      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   ^                                        
      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   gShinyOverworldPalette_Scolipede
src/data/pokemon/species_info/gen_5_families.h:3892:565: error: 'gOverworldPalette_BasculinBlueStriped' undeclared here (not in a function); did you mean 'gMonPalette_BasculinBlueStriped'?
 3892 |         OVERWORLD(
      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     ^                                    
      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     gMonPalette_BasculinBlueStriped
src/data/pokemon/species_info/gen_5_families.h:3892:629: error: 'gShinyOverworldPalette_BasculinBlueStriped' undeclared here (not in a function); did you mean 'gMonShinyPalette_BasculinBlueStriped'?
 3892 |         OVERWORLD(
      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     ^                                         
      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     gMonShinyPalette_BasculinBlueStriped
make: *** [Makefile:412: build/modern/src/pokemon.o] Error 1
make: *** Deleting file 'build/modern/src/pokemon.o'
